# SematicSearchNew

./: README.md  docker-compose.yml
backend/: .gitignore  Cargo.toml  Dockerfile  README.MD  build.rs
backend/SPFresh/: CMakeLists.txt
backend/SPFresh/include/: spfresh_c_api.h
backend/SPFresh/include/spfresh/: index.hpp
backend/SPFresh/src/: spfresh_c_api.cpp
backend/src/: main.rs  spfresh_ffi.rs  store.rs
backend/src/handler/: mod.rs  reviews.rs
frontend/: Cargo.toml  README.MD  Truck.toml  index.html
frontend/src/: lib.rs
