[package]
name = "backend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
cmake = "0.1"

[dependencies]
fs2 = "0.4"
libc = "0.2"
hyper  = { version = "0.14", features = ["full"] }
tokio = { version = "1.4", features = ["full"] }
axum = { version = "0.7", features = ["macros", "json"] } # or ["full"] if you want everything
serde = { version = "1.0", features = ["derive"] }
tower = "0.4.13"
fastembed = "5.0.0"
serde_json = "1.0"
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

